fixing layout issue

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,13 +4,13 @@
     main {
         padding: 15px 0;
         width: 100%;
-        height: 90vh;
+        height: 90svh;
         overflow-y: auto;
     }
 
     // nav for mobile
     nav {
-        height: 10vh;
+        height: 10svh;
         padding: 8px 0;
     }
 
@@ -31,7 +31,7 @@
             position: sticky;
             top: 15px;
             width: 100px;
-            height: calc(100vh - 30px); // 30px of block margins
+            height: calc(100svh - 30px); // 30px of block margins
         }
     }
 }
